# helium-serialization

./: .catel  .editorconfig  .gitignore  BundleGitInfo.targets  CMakeLists.txt  Helium.Serialization.sln  Helium.Serialization.targets  README.md  build.ps1  build.sh  helium-serialization.code-workspace  makefile
.github/workflows/: commit.yml  pr.yml  release.yml
Helium.Serialization/: Helium.Serialization.csproj
Helium.Serialization.Common/: ValueStack.cs  ValueWriteOnlyList.cs
Helium.Serialization.Nbt/: Helium.Serialization.Nbt.csproj
Helium.Serialization.Nbt.Indexing/: CompactNbtTokenIndex.cs  DetailedNbtTokenIndex.cs  Helium.Serialization.Nbt.Indexing.csproj  NbtIndexNode.cs  NbtIndexTree.cs  NbtIndexer.cs  NbtTokenIndex.cs  NbtTokenType.cs  SlimNbtIndexNode.cs  SlimNbtIndexTree.cs  SlimNbtTokenIndex.cs  ThrowHelper.cs
Helium.Serialization.Nbt.Indexing/Internal/: NbtIndexer.Slim.IndexWholeBlob.cs
Helium.Serialization.Nbt.MemoryMapping/: Helium.Serialization.Nbt.MemoryMapping.csproj  ValueStack.cs  ValueWriteOnlyList.cs
cate/: c.cate  c_castle.cate  c_cpp.cate  c_nbt.cate  cpp.cate  cpp_castle.cate  cpp_nbt.cate
inc/: reverse_endianness.h
spec/: castle.md  nbt.md
src/c/castle/: CMakeLists.txt  castle_index.c  castle_index.h  dummy.c
src/c/castle/index/: inc.c
src/c/nbt/: CMakeLists.txt  reverse_endianness.c
src/csharp/Helium.Serialization.Common/: IsIseSupported.cs  ValueStack.cs  ValueWriteOnlyList.cs
src/csharp/Helium.Serialization.Nbt/: Helium.Serialization.Nbt.csproj
src/csharp/Helium.Serialization.Nbt.Indexing/: NbtIndexer.cs
(+3 files in other folders)
